update streamlit ui: support latest knowledge base and search engine chat api; export messages to markdown.

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,6 @@ unstructured[local-inference]
 
 streamlit>=1.25.0
 streamlit-option-menu
-streamlit-chatbox>=1.1.0
+streamlit-antd-components
+streamlit-chatbox>=1.1.6
 httpx
