--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -277,3 +277,13 @@ BING_SEARCH_URL = "https://api.bing.microsoft.com/v7.0/search"
 # 此外，如果是在服务器上，报Failed to establish a new connection: [Errno 110] Connection timed out
 # 是因为服务器加了防火墙，需要联系管理员加白名单，如果公司的服务器的话，就别想了GG
 BING_SUBSCRIPTION_KEY = ""
+
+kbs_config = {
+    "faiss": {
+
+    },
+    "milvus": {
+        "milvus_host": "192.168.50.128",
+        "milvus_port": 19530
+    }
+}
