--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ starlette~=0.27.0
 numpy~=1.24.4
 pydantic~=1.10.11
 unstructured[all-docs]
+python-magic-bin; sys_platform == 'win32'
 
 streamlit>=1.25.0
 streamlit-option-menu
