--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -291,3 +291,8 @@ kbs_config = {
         "secure": False,
     }
 }
+
+# 是否开启中文标题加强，以及标题增强的相关配置
+# 通过增加标题判断，判断哪些文本为标题，并在metadata中进行标记；
+# 然后将文本与往上一级的标题进行拼合，实现文本信息的增强。
+ZH_TITLE_ENHANCE = False
