add SCORE_THRESHOLD to faiss and milvus kb service

--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -116,6 +116,9 @@ OVERLAP_SIZE = 50
 # 知识库匹配向量数量
 VECTOR_SEARCH_TOP_K = 5
 
+# 知识库匹配相关度阈值，取值范围在0-1之间，SCORE越小，相关度越高，取到1相当于不筛选，建议设置在0.5左右
+SCORE_THRESHOLD = 1
+
 # 搜索引擎匹配结题数量
 SEARCH_ENGINE_TOP_K = 5
 
