--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ streamlit>=1.25.0
 streamlit-option-menu
 streamlit-antd-components
 streamlit-chatbox>=1.1.6
+streamlit-aggrid
 httpx
 
 faiss-cpu
