--- a/requirements_webui.txt
+++ b/requirements_webui.txt
@@ -1,6 +1,8 @@
+numpy~=1.24.4
+pandas~=2.0.3
 streamlit>=1.25.0
-streamlit-option-menu
-streamlit-antd-components
+streamlit-option-menu>=0.3.6
+streamlit-antd-components>=0.1.11
 streamlit-chatbox>=1.1.6
-streamlit-aggrid
-httpx
+streamlit-aggrid>=0.3.4.post3
+httpx~=0.24.1
