--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 langchain==0.0.257
 openai
 sentence_transformers
-fschat==0.2.20
-transformers
+fschat==0.2.24
+transformers>=4.31.0
 torch~=2.0.0
 fastapi~=0.99.1
 nltk~=3.8.1
