升级到langchain==0.0.287,fschat==0.0.28;处理langchain.Milvus bug(#10492) (#1454)
* 修复milvus_kb_service中一些bug，添加文档后将数据同步到数据库
* 升级到langchain==0.0.287,fschat==0.0.28;处理langchain.Milvus bug(#10492)
* 修复切换模型BUG: 从在线API切换模型时出错

--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -1,7 +1,7 @@
-langchain==0.0.266
+langchain==0.0.287
+fschat[model_worker]==0.2.28
 openai
 sentence_transformers
-fschat==0.2.24
 transformers>=4.31.0
 torch~=2.0.0
 fastapi~=0.99.1
