--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -59,6 +59,7 @@ FSCHAT_MODEL_WORKERS = {
         # "limit_worker_concurrency": 5,
         # "stream_interval": 2,
         # "no_register": False,
+        # "embed_in_truncate": False,
     },
     "baichuan-7b": { # 使用default中的IP和端口
         "device": "cpu",
