api和webui知识库操作支持chunk_size/overlap_size/zh_title_enhance参数 (#1459)

--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -104,6 +104,10 @@ LLM_MODEL = "chatglm2-6b"
 # 历史对话轮数
 HISTORY_LEN = 3
 
+# LLM通用对话参数
+TEMPERATURE = 0.7
+# TOP_P = 0.95 # ChatOpenAI暂不支持该参数
+
 # LLM 运行设备。设为"auto"会自动检测，也可手动设定为"cuda","mps","cpu"其中之一。
 LLM_DEVICE = "auto"
 
