--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -18,6 +18,7 @@ accelerate
 spacy
 PyMuPDF==1.22.5
 rapidocr_onnxruntime>=1.3.1
+websockets
 
 # uncomment libs if you want to use corresponding vector store
 # pymilvus==2.1.3 # requires milvus==2.1.3
