--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -123,7 +123,14 @@ kbs_config = {
     },
     "pg": {
         "connection_uri": "postgresql://postgres:postgres@127.0.0.1:5432/langchain_chatchat",
-    }
+    },
+    "es": {
+        "host": "127.0.0.1",
+        "port": "9200",
+        "index_name": "test_index",
+        "user": "",
+        "password": ""
+   }
 }
 
 # 默认向量库类型。可选：faiss, milvus, pg.
