--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -102,6 +102,14 @@ llm_model_dict = {
         "api_key": "",
         "is_v2": False,
         "provider": "XingHuoWorker",
+    },
+    # Ernie Bot Turbo API，申请方式请参考 https://cloud.baidu.com/doc/WENXINWORKSHOP/s/4lilb2lpf
+    "ernie-api": {
+        "version": "ernie-bot-turbo",  # 当前支持 "ernie-bot" 或 "ernie-bot-turbo"
+        "api_base_url": "http://127.0.0.1:8888/v1",
+        "api_key": "",
+        "secret_key": "",
+        "provider": "ErnieWorker",
     }
 }
 
