--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -155,13 +155,13 @@ text_splitter_dict = {
 }
 
 # TEXT_SPLITTER 名称
-TEXT_SPLITTER_NAME = "SpacyTextSplitter"
+TEXT_SPLITTER_NAME = "ChineseRecursiveTextSplitter"
 
 # 知识库中单段文本长度(不适用MarkdownHeaderTextSplitter)
 CHUNK_SIZE = 250
 
 # 知识库中相邻文本重合长度(不适用MarkdownHeaderTextSplitter)
-OVERLAP_SIZE = 50
+OVERLAP_SIZE = 0
 
 
 # 日志存储路径
