--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -156,7 +156,7 @@ text_splitter_dict = {
 }
 
 # TEXT_SPLITTER 名称
-TEXT_SPLITTER_NAME = "ChineseRecursiveTextSplitter"
+TEXT_SPLITTER = "ChineseRecursiveTextSplitter"
 
 # 知识库中单段文本长度(不适用MarkdownHeaderTextSplitter)
 CHUNK_SIZE = 250
