--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -1,4 +1,4 @@
-from .model_config import LLM_MODEL, llm_model_dict, LLM_DEVICE
+from configs.model_config import LLM_DEVICE
 import httpx
 
 # httpx 请求默认超时时间（秒）。如果加载模型或对话较慢，出现超时错误，可以适当加大该值。
@@ -8,7 +8,7 @@ HTTPX_DEFAULT_TIMEOUT = 300.0
 # is open cross domain
 OPEN_CROSS_DOMAIN = False
 
-# 各服务器默认绑定host
+# 各服务器默认绑定host。如改为"0.0.0.0"需要修改下方所有XX_SERVER的host
 DEFAULT_BIND_HOST = "127.0.0.1"
 
 # webui.py server
@@ -26,14 +26,14 @@ API_SERVER = {
 # fastchat openai_api server
 FSCHAT_OPENAI_API = {
     "host": DEFAULT_BIND_HOST,
-    "port": 8888,  # model_config.llm_model_dict中模型配置的api_base_url需要与这里一致。
+    "port": 20000,
 }
 
 # fastchat model_worker server
-# 这些模型必须是在model_config.llm_model_dict中正确配置的。
+# 这些模型必须是在model_config.MODEL_PATH或ONLINE_MODEL中正确配置的。
 # 在启动startup.py时，可用通过`--model-worker --model-name xxxx`指定模型，不指定则为LLM_MODEL
 FSCHAT_MODEL_WORKERS = {
-    # 所有模型共用的默认配置，可在模型专项配置或llm_model_dict中进行覆盖。
+    # 所有模型共用的默认配置，可在模型专项配置中进行覆盖。
     "default": {
         "host": DEFAULT_BIND_HOST,
         "port": 20002,
@@ -64,17 +64,17 @@ FSCHAT_MODEL_WORKERS = {
     "baichuan-7b": { # 使用default中的IP和端口
         "device": "cpu",
     },
-    "zhipu-api": { # 请为每个在线API设置不同的端口
-        "port": 20003,
+    "zhipu-api": { # 请为每个要运行的在线API设置不同的端口
+        "port": 21001,
     },
-    "minimax-api": { # 请为每个在线API设置不同的端口
-        "port": 20004,
+    "minimax-api": {
+        "port": 21002,
     },
-    "xinghuo-api": { # 请为每个在线API设置不同的端口
-        "port": 20005,
+    "xinghuo-api": {
+        "port": 21003,
     },
     "qianfan-api": {
-        "port": 20006,
+        "port": 21004,
     },
 }
 
