优化LLM模型列表获取、切换的逻辑： (#1497)
1、更准确的获取未运行的可用模型
2、优化WEBUI模型列表显示与切换的控制逻辑

--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -40,6 +40,7 @@ MODEL_PATH = {
         "chatglm2-6b": "THUDM/chatglm2-6b",
         "chatglm2-6b-int4": "THUDM/chatglm2-6b-int4",
         "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
+        "baichuan-7b": "baichuan-inc/Baichuan-7B",
     },
 }
 
