添加configs/prompt_config.py，允许用户自定义prompt模板： (#1504)
1、 默认包含2个模板，分别用于LLM对话，知识库和搜索引擎对话
2、 server/utils.py提供函数get_prompt_template，获取指定的prompt模板内容（支持热加载）
3、 api.py中chat/knowledge_base_chat/search_engine_chat接口支持prompt_name参数

--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -76,6 +76,9 @@ FSCHAT_MODEL_WORKERS = {
     "qianfan-api": {
         "port": 21004,
     },
+    "fangzhou-api": {
+        "port": 21005,
+    },
 }
 
 # fastchat multi model worker server
